--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
     "cloudinary": "^1.27.0",
     "crypto-js": "^4.0.0",
     "node-fetch": "^2.6.1",
+    "pinia": "^2.0.13",
     "v-calendar": "^3.0.0-alpha.8",
     "vue": "^3.2.31",
     "vue-gtag-next": "^1.14.0",
     "vue-router": "^4.0.14",
     "vue-signature-pad": "^3.0.2",
     "vue-smooth-reflow": "^0.1.12",
-    "vuex": "^4.0.2"
+    "vuex": "^4.0.2",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@types/tailwindcss": "^3.0.10",
