--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "format": "prettier .  --write"
   },
   "dependencies": {
+    "@vuelidate/core": "^2.0.0-alpha.41",
+    "@vuelidate/validators": "^2.0.0-alpha.29",
     "cloudinary": "^1.27.0",
     "crypto-js": "^4.0.0",
     "node-fetch": "^2.6.1",
